Add required exports for the dock icons hask